# PyAny2Json

./: .gitignore  404.html  README.md  dependencies  index.html  justfile  mkdocs.yml  objects.inv  objects.txt  pyproject.toml  setup.py  verify_init.py
api/: index.html
docs/: api.md  index.md  tutorial_1.md  tutorial_2.md  tutorial_3.md  tutorial_4.md  tutorial_5.md  tutorial_6.md  tutorial_7.md  tutorial_8.md
examples/: tutorial1.py  tutorial2.py  tutorial9.py
pyany2json/: __init__.py  document_factory.py  layex_table_parser.py  model.py  setup.py  types.py
pyarchery/: __init__.py  wrappers.py
pyarchery/archery/: __init__.py  classes.py  defines.py  java_types.py
search/: search_index.json
site/: index.html
site/tutorial_1/: index.html
site/tutorial_2/: index.html
src/pyarchery/: __init__.py  config.py  setup.py  wrappers.py
src/pyarchery/archery/: __init__.py  classes.py
src/pyjarchery/: dependencies  setup_java.py
src/pyjarchery/archery/: classes.py
tests/: test_conversion.py  test_init.py  test_wrappers.py
tutorial_1/: index.html
tutorial_10/: index.html
tutorial_2/: index.html
tutorial_3/: index.html
tutorial_4/: index.html
tutorial_5/: index.html
tutorial_6/: index.html
tutorial_7/: index.html
tutorial_8/: index.html
tutorial_9/: index.html
